# gamebase

./: .gitignore  CMakeLists.txt  compiler  compiler.cmd  compiler.cpp  gitpush.bat  readme.md  start.cpp
engineEdit/head/: BoolShared.h  GActor.h  GActorWithAnim.h  GAnimation.h  GBase.h  GCamera.h  GComponentAnimation.h  GController.h  GDebug.h  GLandBlock.h  GObject.h  GPlayerChar.h  GSource.h  GWorld.h  classReg.h  game.h  gridmap.h  listsafe.h  mylib.h  predefine.h  thread_pool.h  timer.h  xmlRead.hpp
engineEdit/head/component/: GComponentAnimation.h  GComponentCamera.h
engineEdit/mainEditor/: MovableEditObj.cpp  editorCommand.h  editorSave.cpp  editorSave.h  editorServer.h  gameEditor.cpp  gameEditor.h  gameEmulator.h  main.cpp
engineEdit/mainGame/: main.cpp
engineEdit/src/: GActor.cpp  GBase.cpp  GCamera.cpp  GController.cpp  GDebug.cpp  GObject.cpp  GPlayerChar.cpp  GSource.cpp  GWorld.cpp  classReg.cpp  game.cpp  gridmap.cpp  main.cpp  mylib.cpp  thread_pool.cpp
lib/: timer.cpp
lib/head/: timeManager.h  timer.h
lib/src/: timeManager.cpp  timer.cpp
tools/: gifToFrames.py  gifToFramesTkinter.py  pytest1.py  t2.py
work/head/: GActorStatic.h  GAnimation.h  GAnimationBp.h  GButton.h  GCollision.h  GMouse.h  GPhysix.h  GTalk.h  GWidget.h  GWidget.hxxx  GWorldEditor.h  actorTest.h  camera.h  debug.h  gametest.h  house.h  jsonRead.hpp  playertest.h  render_object.hx  shader.h  trees.h  worldTest.h  xmlRead.hpp
work/src/: CMakeLists.txt  GAnimation.cpp  GAnimationBp.cpp  GButton.cpp  GCollision.cpp  GMouse.cpp  GPhysix.cpp  GWidget.cpp  GWidget.txt  actorTest.cpp  camera.cpp  house.cpp  render_object.cppx  shader.cpp  trees.cpp
workCode/: AnicomponentTest.h  GTalk.h  playertest.h
